--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Stemlen</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <!------analytics code----->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JVQGFY1X51"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+    gtag('config', 'G-JVQGFY1X51');
+  </script>
+
+  <meta name="google-site-verification" content="Kx9ZyKULzRWAyF4-_46eUs6ogQsCNc_T05aD4bSoGfk" />
+
+
+
+
+
+  <meta charset="utf-8" />
+  <link rel="icon" href="./logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+
+  <!-- SEO Meta Tags -->
+  <meta name="description"
+    content="Stemlen - Stem around and connecting minds. A platform for jobs, hackathons, and talent collaboration. Grow together like a plant stem, reaching new heights." />
+  <meta name="keywords"
+    content="stemlen, Stemlen, stemlen.com,stemlen.in, stem, len, jobs, hackathons, talent, career, programming, stem, growth, connecting minds, collaboration" />
+  <meta name="author" content="Stemlen" />
+
+  <!-- Open Graph Meta Tags (for social media) -->
+  <meta property="og:title" content="Stemlen - Stem Around, Connecting Minds" />
+  <meta property="og:description"
+    content="Stemlen is a platform for jobs, hackathons, and talent collaboration. We connect minds to foster growth and innovation, just like a plant stem." />
+  <meta property="og:image" content="https://stemlen.com/logo.png" />
+  <meta property="og:url" content="https://stemlen.com" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Stemlen" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Stemlen - Stemming Around, Connecting Minds" />
+  <meta name="twitter:description"
+    content="Stemlen is a platform for jobs, hackathons, and talent collaboration. We connect minds to foster growth and innovation, just like a plant stem." />
+  <meta name="twitter:image" content="https://stemlen.com/logo.png" />
+
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" href="./logo.png" />
+
+  <!-- Manifest File -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://stemlen.com" />
+
+  <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Stemlen",
+        "url": "https://stemlen.com",
+        "description": "Stemlen - Stem around and connecting minds. A platform for jobs, hackathons, and talent collaboration. Grow together like a plant stem, reaching new heights.",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://stemlen.com/find-jobs?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+      </script>
+
+  <!-- Title -->
+  <title>Stemlen - Stem Around, Connecting Minds</title>
+</head>
+
+<body>
+  <noscript>
+    <div style="text-align: center; padding: 20px; background: #f8d7da; color: #721c24;">
+      <h1>JavaScript is Required</h1>
+      <p>
+        This website uses JavaScript to provide a rich and interactive experience. Please enable JavaScript in your
+        browser settings to continue.
+      </p>
+      <p>
+        <a href="https://www.enable-javascript.com/" target="_blank" rel="noopener noreferrer">
+          Learn how to enable JavaScript
+        </a>
+      </p>
+    </div>
+  </noscript>
+  <div id="root"></div>
+</body>
+
 </html>
